--- a/Desktop/Desktop/Pages/InsertItem.html
+++ b/Desktop/Desktop/Pages/InsertItem.html
@@ -323,8 +323,7 @@
                     });
                     choose.push({ name: q[i - 1].Name, value: tmp })
                 }
-                console.log(choose)
-                var objtoinsert = ""
+                                
                 choose.map(s => {
                     var str = ""
                     for (var a = 0; a < s.value.length; a++) {
@@ -362,8 +361,8 @@
 
                 }
 
-                console.log(choose)
-                //fusion(choose)
+                
+                fusion(choose)
             }
 
 
